// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API is running 1`] = `
Object {
  "status": "running",
}
`;

exports[`API returns a list of clients 1`] = `
Object {
  "clients": Array [
    Object {
      "__v": 0,
      "_id": "5be0e99d9228d14c03dae2f6",
      "email": "Rowland_Adams@yahoo.com",
      "email2": "Barbara.Ernser29@hotmail.com",
      "fax": "565-128-4346",
      "fullname": "Mrs. Craig Wehner",
      "sexe": "M",
      "telDomicile": "359.379.4026",
      "telMobile": "425-241-3599 x221",
      "telMobile2": "206.017.6574 x234",
      "telPro": "026.837.9868 x468",
    },
    Object {
      "__v": 0,
      "_id": "5be0e99d9228d14c03dae2f7",
      "email": "Mckayla.Bashirian58@yahoo.com",
      "email2": "Anissa_Rowe22@gmail.com",
      "fax": "811-173-7208 x1000",
      "fullname": "Evert Sanford",
      "sexe": "F",
      "telDomicile": "(635) 020-9399 x3473",
      "telMobile": "(061) 205-8187",
      "telMobile2": "952.035.8808 x17687",
      "telPro": "(496) 529-8637",
    },
    Object {
      "__v": 0,
      "_id": "5be0e99d9228d14c03dae2f8",
      "email": "Molly_Heidenreich@yahoo.com",
      "email2": "Christelle71@yahoo.com",
      "fax": "1-910-616-1370 x9932",
      "fullname": "Kody Grimes",
      "sexe": "M",
      "telDomicile": "603.434.5348",
      "telMobile": "1-090-514-3977",
      "telMobile2": "(278) 567-4818 x68456",
      "telPro": "649-323-3798",
    },
    Object {
      "__v": 0,
      "_id": "5be0e99d9228d14c03dae2f9",
      "email": "Aric.Tremblay0@hotmail.com",
      "email2": "Ova.Jenkins69@yahoo.com",
      "fax": "916.049.6188 x625",
      "fullname": "Cecilia Mante",
      "sexe": "M",
      "telDomicile": "(217) 271-5777 x25165",
      "telMobile": "1-673-377-2839",
      "telMobile2": "(301) 594-2456 x3986",
      "telPro": "(738) 199-5414",
    },
    Object {
      "__v": 0,
      "_id": "5be0e99d9228d14c03dae2fa",
      "email": "Wilfredo62@yahoo.com",
      "email2": "Francisca70@yahoo.com",
      "fax": "1-644-572-3024",
      "fullname": "Ms. Ian Crooks",
      "sexe": "M",
      "telDomicile": "(715) 225-1415",
      "telMobile": "106-076-5430",
      "telMobile2": "1-865-811-7791",
      "telPro": "338-169-3927 x28237",
    },
  ],
  "next": "?page=2&size=5",
  "previous": null,
}
`;

exports[`API returns a list of lots 1`] = `
Object {
  "lots": Array [
    Object {
      "__v": 0,
      "_id": "5be0e99d9228d14c03dae370",
      "client": "5be0e99d9228d14c03dae2f6",
      "surface": 35,
    },
    Object {
      "__v": 0,
      "_id": "5be0e99d9228d14c03dae371",
      "client": "5be0e99d9228d14c03dae2f6",
      "surface": 27,
    },
    Object {
      "__v": 0,
      "_id": "5be0e99d9228d14c03dae372",
      "client": "5be0e99d9228d14c03dae2f7",
      "surface": 25,
    },
    Object {
      "__v": 0,
      "_id": "5be0e99d9228d14c03dae373",
      "client": "5be0e99d9228d14c03dae2f7",
      "surface": 26,
    },
    Object {
      "__v": 0,
      "_id": "5be0e99d9228d14c03dae374",
      "client": "5be0e99d9228d14c03dae2f7",
      "surface": 36,
    },
  ],
  "next": "?page=2&size=5",
  "previous": null,
}
`;

exports[`API returns a not found error 1`] = `
Object {
  "error": "endpoint not found",
}
`;
